changes per jeff witmer's comments, moved paper to its own folder

--- a/paper/workshops.tex
+++ b/paper/workshops.tex
@@ -30,7 +30,7 @@
 \interfootnotelinepenalty = 10000  % Keep footnotes from breaking across pages
 \raggedbottom
 
-\date{November 13, 2020}
+\date{January 2, 2021}
 
 \begin{document}
 
@@ -92,7 +92,7 @@ reproducible tools. These workshops help to bridge the gap between the computing
 skills necessary for scientific research and the computing skills with which
 students leave their statistics service courses. Moreover, though
 targeted to environmental science graduate students, these workshops are open to
-the larger academic community. As such, they promote the continued learning of 
+the larger academic community. As such, they promote continued learning of 
 the computational tools necessary for working with data, and provide resources
 for incorporating data science into the classroom.
 \end{abstract}
@@ -175,7 +175,7 @@ data exploration to the communication of results (Figure \ref{fig:cycle}), where
 data modeling is but one component. We focus on the ``data science skills'' 
 necessary to engage in the entire data analysis cycle rather than focusing
 solely on the ``analysis'' portion of the cycle, due to the firm grounding of 
-statistical preparation environmental science students experiences during their
+statistical preparation environmental science students experience during their
 degrees. These statistics courses, however, often do not expose students to data
 science skills that may be necessary for them to carry out an analysis they
 learned in the classroom in the context of real data. The skills necessary for
@@ -209,7 +209,7 @@ better prepare current and future generations of researchers
 to environmental science research \citep{andelman, dodds1, dodds2, eglen, 
 green, hastings, kelling, wilson-software-carpentry, wilson, wing}, 2012 brought
 two studies on the computational ill-preparation of environmental science 
-students by their curriculum. In the first, large-scale study of ecology
+students by their curriculum. In the first, a large-scale study of ecology
 instructors, Strasser and Hampton (\citeyear{labs}) found that undergraduate
 students were not being prepared with the data management tools necessary to
 engage in environmental science research. Across 51 different institutions, 
@@ -270,13 +270,13 @@ teach lags decades behind what we practice'' and ``the gap between our
 half-century-old curriculum and our contemporary statistical practice continues
 to widen'' (p.\ 268). Though the issue focused on the broader statistics
 curriculum, statistics educators continued to lament that the current
-Introductory Statistics curriculum teaches but a snapshot of the entire data
+introductory statistics curriculum teaches but a snapshot of the entire data
 analysis cycle, ``wherein challenges with data computational methods, and
 visualization and presentation are typically elided'' 
 \citep[p.\ 336]{baumer_datascience}. 
 
 \quad The following year brought the revised GAISE college report 
-\citep{gaise}, creating a push for reform in the Introductory Statistics 
+\citep{gaise}, creating a push for reform in the introductory statistics 
 curriculum. The authors suggested two new emphases for the first recommendation
 (``teach statistical thinking"), which better reflect the modern practice of
 statistics. First, statistics educators should ``teach statistics as
@@ -287,7 +287,7 @@ throughout the statistics community---that students should emerge from our
 courses with the understanding that data analysis ``isn't just inference and
 modeling, it's also data importing, cleaning, preparation, exploration, and
 visualization'' \citep{mine-jsm}. Yet, the inclusion of these topics in the
-Introductory Statistics curriculum for non-majors is still a heated
+introductory statistics curriculum for non-majors is still a heated
 discussion (Baumer et al. \citeyear{horton_takingachance}; Kaplan, 
 \citeyear{kaplan}; McNamara, \citeyear{mcnamara}), as many educators believe
 (1) that it is not possible to teach statistical concepts and programming in
@@ -296,7 +296,7 @@ could be used towards teaching important statistical concepts, or (3) students
 are not interested in learning to program \citep{mine-jsm}. Thus, despite
 charges for the statistics community to ``treat computing as fundamental as
 basic mathematics and writing'' \citep[p.\ 298]{esr}, many students leave their
-Introductory Statistics course without a set of data science skills applicable
+introductory statistics course without a set of data science skills applicable
 to their lives---a frustration echoed by environmental science educators 
 \citep{hampton, carpentry}. 
 
@@ -430,7 +430,7 @@ required of environmental science graduate students.
 
 \quad In the spring of 2017 and fall of 2018, every faculty member
 currently overseeing a graduate student in the ARS, Ecology, LRES, and PSPP
-departments was emailed requesting their participation in this research. 
+departments was sent an email requesting their participation in this research. 
 Table \ref{tab:faculty} outlines the number of faculty requested for
 participation and the number of faculty interviewed, by departmental
 affiliation. 
@@ -465,7 +465,7 @@ manuscript are available through Dryad \citep{dryad_data}.
 
 \quad The primary author led a three-stage data analysis process of the faculty
 interviews (Miles, Huberman, Salada$\tilde{\text{n}}$a, \citeyear{miles}). 
-During the first stage, every faculty member's interviews were transcribed
+During the first stage, every faculty member's interview was transcribed
 verbatim. Subsequently, the primary author read each transcript, highlighting
 excerpts where computing skills were discussed, creating descriptive codes for
 the skills faculty identified as necessary in each of these excerpts. 
@@ -479,7 +479,7 @@ to the others. During this process, it was determined whether themes captured
 similar constructs and should be merged, or if themes ought to remain separate. 
 For example, while every faculty voiced students' need to work with data in 
 \texttt{R}, these sentiments were voiced alongside students' need to perform
-other data wrangling operations, such filtering out rows or selecting columns. 
+other data wrangling operations, such as filtering out rows or selecting columns. 
 Hence, the themes of ``working with data'' and ``data wrangling'' were merged
 into the single theme of ``working with data.'' 
 
@@ -498,7 +498,7 @@ These final themes informed the design of data science workshops.
 
 \subsection{Themes of Skills Identified by Environmental Science Faculty}
 
-\noindent While some faculty had difficulties disentangling the statistical
+\noindent While some faculty had difficulty disentangling the statistical
 methods students use in research from the computing required to implement those
 methods, many were able to express the computing skills necessary for graduate
 students in their field to engage in the entire data analysis process. A
@@ -548,7 +548,7 @@ visualize [their] data to explore and understand it.''
 
 \subsubsection{Reproducibility}  
 
-\noindent Every faculty member emphasized the necessity for students' analysis
+\noindent Every faculty member emphasized the necessity for students' analyses
 to be computationally reproducible, where faculty would be able to recreate 
 student's results, ``given only a set of files and written instructions''
 (Kitzes, Turek, Deniz, \citeyear{reproducible}). Across environmental science
@@ -665,7 +665,7 @@ mark-recapture, and meta- and micro-level data.
 
 \noindent The structure and context of these workshops include a statistical
 programming language used extensively throughout environmental science research
-(\texttt{R}), environments which facilitate the learning of \texttt{R}
+(\texttt{R}), environments that facilitate the learning of \texttt{R}
 (RStudio and RStudio Cloud), user-friendly \texttt{R} packages for data
 wrangling and data visualization (\textbf{tidyverse}), and tools that promote
 reproducibility throughout the entire data analysis cycle (\textbf{rmarkdown}).
@@ -723,19 +723,19 @@ administered under an RStudio Cloud Instructor subscription.}
 \subsubsection{Why the tidyverse?}
 
 \noindent Considering much of \texttt{R}'s language has not changed over the 
-last 20 years, and the usage of \R~for scientific research has multiplied, there
+last 20 years, and the use of \R~for scientific research has multiplied, there
 existed a desire for a ``smoother, more efficient, and more readable pipeline
 for modern \texttt{R} workflows'' (Ross, Wickham, \& Robinson, 
 \citeyear{tidytools}, p.\ 19). The suite of \texttt{R} packages developed by 
 Wickham and colleagues, universally known as the ``tidyverse,'' has 
-created user friendly \texttt{R} tools which ``share an underlying design
+created user friendly \texttt{R} tools that ``share an underlying design
 philosophy, grammar, and data structures'' \citep{tidyverse}. Inspired by how
 cumbersome it can be to remember the different base \texttt{R} functions to
 wrangle and visualize your data, each with its own unique syntax, the workshops
 in this series make use of many tidyverse packages, including 
 \textbf{dplyr} (\citeyear{dplyr}), \textbf{tidyr} (\citeyear{tidyr}), and 
-ggplot2 (\citeyear{ggplot}). The common syntax of these packages lessen
-learner's cognitive load, allowing for participants to leave each workshop with
+ggplot2 (\citeyear{ggplot}). The common syntax of these packages lessens
+learner's cognitive load, allowing for a participant to leave each workshop with
 more tools in their data science toolbox. 
 
 
@@ -793,7 +793,7 @@ of conditional operations. The second half of the workshop covers methods to
 iterate or replicate a set of instructions many times. Looping, specifically
 \texttt{$\text{for}\small(\small) \small\{ \small\}$} loops, are introduced as a
 popular way to iterate or replicate the same set of instructions. Working
-through exercises which repeat operations on a dataset using both a 
+through exercises that repeat operations on a dataset using both a 
 \texttt{for()} loop and a recursive \texttt{for()} loop, motivates a
 discussion of why vectorization is recommended for non-recursive
 \texttt{for()} loops. In
@@ -803,7 +803,7 @@ learning about vectorized operations using the \textbf{purrr} package
 
 \quad To conclude, functions are presented as an approach to replicate the same
 set of instructions throughout your code. Inspired by a script
-which copies and pastes the same process multiple times, attendees see
+that copies and pastes the same process multiple times, attendees see
 why this is an undesirable practice. Attendees are then tasked with transforming
 the copy-paste-modify process into a function. By parsing out the function-writing
 process into a set of steps that should be used when you have copied and
@@ -915,7 +915,7 @@ Microbiology, Earth Sciences, Ecology, LRES, and PSPP. Over 60\% of workshop
 attendees were master's and doctoral students. It is worth noting, however, that
 18 faculty, staff, and postdocs also attended these workshops. Figure 
 \ref{fig:departments} displays the department affiliations of the workshop
-attendees and their reported occupation. 
+attendees and their reported occupations. 
 
 {\spacingset{1.05}
 \begin{figure}[h!]
@@ -1133,7 +1133,7 @@ whose students enroll in statistics service courses.  In our
 research, we found that environmental science faculty stressed the importance of
 graduate students developing skills surrounding the fundamentals of working with
 data in \texttt{R}, wrangling skills for data processing and preparation, 
-creation of data visualizations, and usage of reproducible work flows. 
+creation of data visualizations, and use of reproducible work flows. 
 
 \quad In this new era of data science, the time is ripe for us to ``update the
 foundational concepts and infrastructure'' \citep[p.\ 5]{crossroads} included
@@ -1145,16 +1145,16 @@ co-curricular learning, when paired with statistics service courses, so students
 leave their statistics course with the computing skills necessary to engage in
 the entire data analysis cycle. Moreover, these workshops support
 university-wide data science literacy, facilitating avenues for faculty to
-acquire data science knowledge and skills which ``they have not had the
+acquire data science knowledge and skills that ``they have not had the
 opportunity to learn well'' \citep[p.\ 106]{nolan}, and providing resources for
 instructors to meaningfully integrate discipline-specific computing skills into
 their classroom. 
 
 \section{Acknowledgements}
 
-\noindent We would like to specially thank the participants of this study,
-without whom this research would not have been possible. We would also like to
-thank the workshop instructors and helpers for helping to grow the data
+\noindent We give special thanks to the participants of this study,
+without whom this research would not have been possible. We also thank the 
+workshop instructors and helpers for helping to grow the data
 literacy across our campus. Finally, thanks to Jennifer Green, Mark Greenwood,
 Johanna Hardin, and the reviewers for their insightful comments.
 
